vcluster_versioned_docs/version-0.30.0/_partials/config/experimental.mdx

<details className="config-field" data-expandable="true">
<summary>

## `experimental` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental}

Experimental features for vCluster. Configuration here might change, so be careful with this.

</summary>




<details className="config-field" data-expandable="true">
<summary>

### `deploy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy}

Deploy allows you to configure manifests and Helm charts to deploy within the host or virtual cluster.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `host` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-host}

Host defines what manifests to deploy into the host cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `manifests` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-host-manifests}

Manifests are raw Kubernetes manifests that should get applied within the host cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `manifestsTemplate` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-host-manifestsTemplate}

ManifestsTemplate is a Kubernetes manifest template that will be rendered with vCluster values before applying it within the host cluster.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `vcluster` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster}

VCluster defines what manifests and charts to deploy into the vCluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `manifests` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-manifests}

Manifests are raw Kubernetes manifests that should get applied within the virtual cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `manifestsTemplate` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-manifestsTemplate}

ManifestsTemplate is a Kubernetes manifest template that will be rendered with vCluster values before applying it within the virtual cluster.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `helm` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm}

Helm are Helm charts that should get deployed into the virtual cluster

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `chart` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-chart}

Chart defines what chart should get deployed.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-chart-name}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `repo` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-chart-repo}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `insecure` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-chart-insecure}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `version` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-chart-version}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `username` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-chart-username}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `password` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-chart-password}



</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `release` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-release}

Release defines what release should get deployed.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-release-name}

Name of the release

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-release-namespace}

Namespace of the release

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-values}

Values defines what values should get used.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeout` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-timeout}

Timeout defines the timeout for Helm

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `bundle` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-deploy-vcluster-helm-bundle}

Bundle allows to compress the Helm chart and specify this instead of an online chart

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `syncSettings` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-syncSettings}

SyncSettings are advanced settings for the syncer controller.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `setOwner` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#experimental-syncSettings-setOwner}

SetOwner specifies if vCluster should set an owner reference on the synced objects to the vCluster service. This allows for easy garbage collection.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `hostMetricsBindAddress` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-syncSettings-hostMetricsBindAddress}

HostMetricsBindAddress is the bind address for the local manager

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `virtualMetricsBindAddress` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-syncSettings-virtualMetricsBindAddress}

VirtualMetricsBindAddress is the bind address for the virtual manager

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `virtualClusterKubeConfig` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-virtualClusterKubeConfig}

VirtualClusterKubeConfig allows you to override distro specifics and specify where vCluster will find the required certificates and vCluster config.
Deprecated: Removed in 0.29.0.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `kubeConfig` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-virtualClusterKubeConfig-kubeConfig}

KubeConfig is the virtual cluster kubeconfig path.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `serverCAKey` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-virtualClusterKubeConfig-serverCAKey}

ServerCAKey is the server ca key path.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `serverCACert` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-virtualClusterKubeConfig-serverCACert}

ServerCAKey is the server ca cert path.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `clientCACert` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-virtualClusterKubeConfig-clientCACert}

ServerCAKey is the client ca cert path.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `requestHeaderCACert` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-virtualClusterKubeConfig-requestHeaderCACert}

RequestHeaderCACert is the request header ca cert path.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `denyProxyRequests` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-denyProxyRequests}

DenyProxyRequests denies certain requests in the vCluster proxy.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-denyProxyRequests-name}

The name of the check.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `namespaces` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-denyProxyRequests-namespaces}

Namespace describe a list of namespaces that will be affected by the check.
An empty list means that all namespaces will be affected.
In case of ClusterScoped rules, only the Namespace resource is affected.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `rules` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-denyProxyRequests-rules}

Rules describes on which verbs and on what resources/subresources the webhook is enforced.
The webhook is enforced if it matches any Rule.
The version of the request must match the rule version exactly. Equivalent matching is not supported.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `apiGroups` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-denyProxyRequests-rules-apiGroups}

APIGroups is the API groups the resources belong to. '*' is all groups.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `apiVersions` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-denyProxyRequests-rules-apiVersions}

APIVersions is the API versions the resources belong to. '*' is all versions.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `resources` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-denyProxyRequests-rules-resources}

Resources is a list of resources this rule applies to.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `scope` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-denyProxyRequests-rules-scope}

Scope specifies the scope of this rule.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operations` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-denyProxyRequests-rules-operations}

Verb is the kube verb associated with the request for API requests, not the http verb. This includes things like list and watch.
For non-resource requests, this is the lowercase http verb.
If '*' is present, the length of the slice must be one.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `excludedUsers` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-denyProxyRequests-excludedUsers}

ExcludedUsers describe a list of users for which the checks will be skipped.
Impersonation attempts on these users will still be subjected to the checks.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `proxy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-proxy}

Proxy enables vCluster-to-vCluster proxying of resources

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `customResources` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">&#123;key: object&#125;</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-proxy-customResources}

CustomResources is a map of resource keys (format: "kind.apiGroup/version") to proxy configuration

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-proxy-customResources-enabled}

Enabled defines if this resource proxy should be enabled

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `targetVirtualCluster` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-proxy-customResources-targetVirtualCluster}

TargetVirtualCluster is the target virtual cluster for the custom resource proxy

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-proxy-customResources-targetVirtualCluster-name}

Name is the name of the target virtual cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `project` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-proxy-customResources-targetVirtualCluster-project}

Project is the project of the target virtual cluster. If empty, defaults to the same project as the source vCluster.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `accessResources` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-proxy-customResources-accessResources}

AccessResources defines which resources should be accessible in the proxy.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `docker` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker}

Docker allows you to configure Docker related settings when deploying a vCluster using Docker.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `image` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-image}

Image defines the image to use for the container. Defaults to ghcr.io/loft-sh/vm-container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `ports` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-ports}

Ports defines extra port mappings to be added to the container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `volumes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-volumes}

Volumes defines extra volumes to be added to the container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `env` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-env}

Env defines extra environment variables to be added to the container. Use key=value.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `args` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-args}

Args defines extra arguments to be added to the docker run command of the container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-enabled}

Enabled defines if the vCluster was deployed using Docker. This is automatically set by vCluster and should not be set by the user.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `network` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-network}

Network defines the network to use for the vCluster. If not specified, the a network will be created for the vCluster.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `nodes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-nodes}

Nodes defines the nodes of the vCluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `image` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-nodes-image}

Image defines the image to use for the container. Defaults to ghcr.io/loft-sh/vm-container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `ports` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-nodes-ports}

Ports defines extra port mappings to be added to the container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `volumes` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-nodes-volumes}

Volumes defines extra volumes to be added to the container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `env` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-nodes-env}

Env defines extra environment variables to be added to the container. Use key=value.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `args` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-nodes-args}

Args defines extra arguments to be added to the docker run command of the container.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-nodes-name}

Name defines the name of the node. If not specified, a random name will be generated.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `registryProxy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-registryProxy}

Defines if docker images should be pulled from the host docker daemon. This prevents pulling images again and allows to
use purely local images. Only works if containerd image storage is used. For more information, see https://docs.docker.com/engine/storage/containerd

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-registryProxy-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `loadBalancer` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-loadBalancer}

Defines if vCluster should configure load balancer services inside the vCluster. This might require
sudo access on the host cluster for docker desktop or rancher desktop on macos.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-loadBalancer-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `forwardPorts` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#experimental-docker-loadBalancer-forwardPorts}

ForwardPorts defines if the load balancer ips should be made available locally
via port forwarding. This will be only done if necessary for example on macos when using docker desktop.

</summary>



</details>


</details>


</details>


</details>
